Fix scrollview, projects added, remove scrollbars, transition hamburger menu

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -12,6 +12,81 @@
     top: 20px !important;
     width: 50px;
     z-index: 2000;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+
+#menu-toggle span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 50%;
+  background: #009933;
+  border-radius: 9px;
+  opacity: 1;
+  left: 25%;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#menu-toggle span:nth-child(1) {
+  top: 16px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#menu-toggle span:nth-child(2) {
+  top: 24px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#menu-toggle span:nth-child(3) {
+  top: 32px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#menu-toggle.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 16px;
+  left: 35%;
+}
+
+#menu-toggle.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+#menu-toggle.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 32px;
+  left: 35%;
 }
 
 #toggle-shadow {
@@ -353,7 +428,13 @@ section.module.parallax {
 /*modal, MoFos*/
 body {
     padding-right: 0 !important;
-    overflow-x: hidden;
+    overflow-y: scroll !important;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 
 body .modal-dialog {
